--- a/package.json
+++ b/package.json
@@ -18,9 +18,22 @@
   "homepage": "https://github.com/oww1220/IKEA-API-TEST#readme",
   "devDependencies": {
     "browser-sync": "^2.26.7",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-plumber": "^1.2.1",
+    "gulp-pxtorem": "^3.0.0",
+    "gulp-modify-css-urls": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.14.1"
   },
   "dependencies": {
     "eslint": "^7.30.0"
-  }
+  },
+  "browserslist": [
+    "> 0%",
+    "last 4 versions"
+  ]
 }
