--- a/package.json
+++ b/package.json
@@ -17,6 +17,18 @@
   },
   "homepage": "https://github.com/oww1220/IKEA-API-TEST#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-changed": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -29,9 +41,7 @@
     "gulp-uglify": "^3.0.2",
     "node-sass": "^4.14.1"
   },
-  "dependencies": {
-    "eslint": "^7.30.0"
-  },
+  "dependencies": {},
   "browserslist": [
     "> 0%",
     "last 4 versions"
