--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
     "globals": {
         //"IScroll": true,
         //"Swiper": true,
-        //"UI": true,
+        "UI": true,
         //"lottie": true
     }
 }
