--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,25 @@
-
 {
-    "env": {
-        "browser": true,
-        "es6": true,
-        "node": true,
-        "jquery": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "prettier"
-    ],
-    "plugins": ["prettier"],
-    "settings": {
-        "react": {
-        "version": "detect"
-        }
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018
-    },
-    "rules": {
-        "no-unused-vars": 1
-    },
-    "globals": {
-        //"IScroll": true,
-        //"Swiper": true,
-        "UI": true,
-        //"lottie": true
-    }
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true,
+    "jquery": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": ["prettier"],
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
+  "rules": {
+    "no-unused-vars": 1
+  },
+  "globals": {
+    //"IScroll": true,
+    //"Swiper": true,
+    // "UI": true,
+    //"lottie": true
+  }
 }
