--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
     "babel-loader": "^8.2.2",
+    "browser-sync": "^2.26.7",
     "eslint": "^7.6.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-changed": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "browser-sync": "^2.26.7",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-modify-css-urls": "^2.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pxtorem": "^3.0.0",
-    "gulp-modify-css-urls": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "prettier": "^2.6.2"
   },
   "dependencies": {},
   "browserslist": [
