--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,12 @@
     "ecmaVersion": 2018
   },
   "rules": {
+    "prettier/prettier": [
+      "error",
+        {
+          "endOfLine": "auto"
+        }
+    ],
     "no-unused-vars": 1
   },
   "globals": {
